# book-library

./: .gitignore  pyproject.toml
bot/: config.py  main.py
bot/admin/: __init__.py  add_book.py  add_channel.py  broadcast.py  channels.py  commands.py  help.py  reply.py  router.py  start.py  statistic.py
bot/database/: base.py  session.py
bot/database/models/: __init__.py  books.py  channels.py  users.py
bot/filters/: __init__.py  admin_filter.py
bot/inlinemode/: __init__.py  book.py  book_handler.py  inline.py  inline_handler.py
bot/middlewares/: __init__.py  activity.py  channel.py  user.py  user_middleware.py
bot/repo/: __init__.py  book_repo.py
bot/repository/: book_repo.py
bot/routers/: __init__.py  admin.py  basic.py  books.py  message_to_admin.py  search.py  start.py
data/: books.db
