[project]
name = "book-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Anasxon Ummataliyev",email = "aummataliy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiogram (>=3.23.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
